increase global font size and fix(?) murphy book navbar-vs-content spacing

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -7,7 +7,7 @@ body {
     background-color: #f0f0f0;
     height: 100vh;
     width: 100vw;
-    scroll-behavior: smooth;
+    font-size: 1.15em;
 }
 
 h1, h2 {
